--- a/Rodrigo_Guerrero.ipynb
+++ b/Rodrigo_Guerrero.ipynb
@@ -1297,7 +1297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**En función de los gráficos e del ticket médio, es posible decir que los clientes de la región sur son los que gastan menos.** \n",
+    "**En función de los gráficos y del ticket médio, es posible decir que los clientes de la región sur son los que gastan menos.** \n",
     "\n",
     "Por otro lado, para determinar donde se gasta más, investigaremos más profundamente las regiones oeste y este."
    ]
